# event-driven-fraud-detector

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: README_en.md  c4_container_diagram_UML.md  er_diagram_UML.md  transaction_lifecycle_UML.md
load-test/: locustfile.py  results.md
load-test/results/: after.html  baseline_50.html  before.html  results.md
monitoring/: prometheus.yml
postgres/: init.sql
services/admin-api/: Dockerfile  pyproject.toml
services/admin-api/app/: main.py  models.py  schemas.py
services/admin-api/app/auth/: dependencies.py  security.py
services/admin-api/app/db/: session.py
services/admin-api/app/routes/: auth.py  dashboard.py  limits.py  rules.py  users.py
services/admin-api/tests/: conftest.py  test_auth.py  test_dashboard.py  test_limits.py  test_rules.py
services/fraud-detector/: Dockerfile  pyproject.toml
services/fraud-detector/app/: config.py  main.py  models.py
services/fraud-detector/app/kafka/: consumer.py
services/fraud-detector/app/rules/: __init__.py  base.py  engine.py  high_frequency.py  large_amount.py  new_country.py  night_time.py  unusual_city.py  velocity_amount.py
services/fraud-detector/tests/: conftest.py  test_consumer.py  test_rules.py
services/limits-service/: Dockerfile  pyproject.toml
services/limits-service/app/: main.py  models.py  schemas.py
services/limits-service/app/kafka/: consumer.py  producer.py
services/limits-service/app/routes/: limits.py
services/limits-service/scripts/: seed_limits.py
services/limits-service/tests/: conftest.py  test_consumer.py  test_routes.py
shared/: pyproject.toml
tests/: test_full_pipeline.py
(+23 files in other folders)
